test/compile_errors/err_private_const_cross_module.w
//! expect-check-fail: symbol 'PRIVATE_CONST' is private to module

use visibility.private_surface

fn main:
    let _x = PRIVATE_CONST
